--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,7 +20,7 @@ a {
     color-scheme: dark;
   }
   body {
-    color: white;
+    color: rgb(99, 99, 99);
     background: rgb(255, 255, 255);
   }
 }
